# Info-2019_BeagleBone_Black

./: .gitattributes  .gitignore  .gitmodules  README.md  setup.sh  todo.txt  todolist
src/actions/idle/: CMakeLists.txt
src/actions/idle/include/idle/: idle_proc.hpp
src/actions/reach/: CMakeLists.txt  package.xml
src/actions/reach/include/reach/: reach_proc.hpp
src/actions/reach/launch/: pkg.launch
src/actions/reach/src/: reach_proc.cpp
src/actions/template/: CMakeLists.txt  package.xml  setup.py
src/actions/template/launch/: pkg.launch
src/actions/template/src/: template_performer.py
src/actions/template/test/: test-template-performer.launch  test_template_performer.py
src/ai/action_manager/: CMakeLists.txt  package.xml  setup.py
src/ai/action_manager/include/action_manager/: Action.hpp  ActionBlock.hpp  ActionClass.h  ActionPerformer.hpp  ActionPerformer.py  ActionPoint.h  Argumentable.hpp  AtomicAction.hpp  PerformClient.hpp  Point.h  Point.hpp  __init__.py  action.py  action_group.py  action_manager_node.h  action_performer.py  action_repeat.py  actions.config  argumentable.py  object_requirement.py  perform_client.py  util.py
src/ai/action_manager/launch/: pkg.launch
src/ai/action_manager/src/: Action.cpp  ActionBlock.cpp  ActionClass.cpp  ActionPerformer.cpp  ActionPoint.cpp  Argumentable.cpp  AtomicAction.cpp  PerformClient.cpp  Point.cpp  action_manager_node.cpp
src/ai/action_manager/test/: simple_action_performers.py  test-action-group.launch  test-actions-cpp.launch  test-actions-py.launch  test-actions.launch  test-parsing.launch  test-perform-client.launch  test_action.py  test_action_group.py  test_best_action_group.py  test_ordered_action_group.py  test_parsing.py  test_perform_client.py  test_unordered_action_group.py
src/ai/action_manager/test/actions/: move_a_lot.xml
src/ai/action_manager/test/actions_performers/: MoveAP.cpp  python_examples.py  test_fail_performer.cpp  test_move_performer.cpp  test_sleep_performer.cpp
src/ai/ai_msgs/: CMakeLists.txt  README.md  package.xml
src/ai/ai_msgs/action/: Perform.action  PerformAction.action
src/ai/ai_msgs/const/: ActionStatus.msg  NodeStatus.msg  Side.msg  Topics.msg
src/ai/ai_msgs/msg/: ActionPoint.msg  Argument.msg  AwaitNodesResult.msg  EmergencyStop.msg  MPoint.msg  NodeRequirement.msg  NodeStatusUpdate.msg  Point2D.msg  PointsScored.msg  ProximityStop.msg  RobotStatus.msg  SetSide.msg  Shape.msg  StartRobot.msg  Value.msg
src/ai/ai_msgs/srv/: AwaitNodesRequest.srv  ComputeActionPoint.srv  CurrentActionDone.srv  DeclareZone.srv  FindPath.srv  GetActionToDo.srv  GetMapSize.srv  GetSidedPoint.srv  NodeReadiness.srv  ObjectManager.srv  Pathfinder.srv  SetSchedulerState.srv
src/ai/controller/: CMakeLists.txt  package.xml  requirements.txt
src/ai/controller/include/action/: action_define.h
src/ai/controller/include/controller/: ActionPerformer.hpp  OrientedPoint.h  controller_node.h  controller_node.hpp
src/ai/controller/launch/: pkg.launch
src/ai/controller/src/: ActionPerformer.cpp  OrientedPoint.cpp  controller_node.cpp
src/ai/node_watcher/: CMakeLists.txt  package.xml  setup.py
src/ai/node_watcher/include/node_watcher/: Node.hpp  NodeStatusHandler.hpp  NodesAwaiter.hpp  __init__.py  node.py  node_status_handler.py  node_watcher_node.hpp
src/ai/node_watcher/launch/: pkg.launch
src/ai/node_watcher/src/: Node.cpp  NodeStatusHandler.cpp  NodesAwaiter.cpp  node_watcher_node.cpp
src/ai/node_watcher/test/: test-ns-handler.launch  test_ns_handler.py
src/ai/pathfinder/: CMakeLists.txt  package.xml  pkg.launch
src/ai/pathfinder/include/pathfinder/: dynamic_barriers_manager.h  (+4 more)
src/ai/pathfinder/src/: pathfinder_node.cpp
src/ai/pathfinder/srv/: SetMapDimension.srv  SetRobotRadius.srv
src/ai/pathfinding/: CMakeLists.txt  package.xml  setup.py
src/ai/pathfinding/launch/: pkg.launch
src/ai/pathfinding/src/: pathfinding_node.py
src/ai/robot_watcher/: CMakeLists.txt  package.xml  setup.py
src/ai/robot_watcher/launch/: pkg.launch
src/ai/robot_watcher/msg/: NodeReadiness.msg  RobotStatus.msg
src/ai/robot_watcher/src/: RobotServices.cpp  robot_watcher_node.py
src/ai/robot_watcher/srv/: GetActionToDo.srv
src/ai/scheduler/: CMakeLists.txt  package.xml  scheduler.test  setup.py
src/ai/scheduler/action_files/: main.json
src/ai/scheduler/launch/: parsing.test  performing.test  pkg.launch  scheduler.test
src/ai/scheduler/src/: Action.cpp  ActionBlock.cpp  ActionClass.cpp  ActionFilePath.cpp  ActionManager.cpp  ActionPoint.cpp  ActionTools.cpp  ActionsParser.cpp  AtomicAction.cpp  ComposedAction.cpp  Point.cpp  scheduler_node.cpp  scheduler_node.py
src/ai/vision/: CMakeLists.txt  package.xml  setup.py
src/ai/vision/src/: Object.cpp  ObjectParser.cpp  vision_node.cpp  vision_node.py
src/ai/vision/test/: test-parsing.launch  test_parsing.py
src/interface/can_interface/: CMakeLists.txt  mapping.xml  package.xml  setup.py  template.cpp
src/interface/can_interface/launch/: pkg.launch
src/interface/can_interface/src/: IOElements.py  InterfaceCode.py  can_cli.py  can_interface_node.py  generate_interface.py  ioelements.py  mapping.xml  robot_interface_node.cpp
src/interface/can_interface/test/: test-interface.launch  test-parsing.launch  test_interface.py  test_parsing.py  virtual_can.sh
src/interface/interface_description/: CMakeLists.txt  package.xml
src/interface/interface_description/can/: devices.xml  frames.xml  mapping.xml  messages.xml
src/interface/interface_description/const/: InterfaceTopics.msg
src/interface/interface_msgs/: CMakeLists.txt  README.md  package.xml
src/interface/interface_msgs/input/: RobotBlocked.msg  StmDone.msg
src/interface/interface_msgs/msg/: CanData.msg  DirectedPose.msg  Directions.msg  Point.msg  Speed.msg  StmMode.msg
src/interface/interface_msgs/output/: MoveOrder.msg  Pwms.msg  StmMode.msg
src/simple_test/: CMakeLists.txt  package.xml  requirements.txt
src/simple_test/include/simple_test/: simple_test_node.hpp
src/simple_test/launch/: pkg.launch
src/simple_test/src/: simple_test_node.cpp
(+371 files in other folders)
