<?xml version="1.0"?>
<package format="2">
  <name>action_manager</name>
  <version>0.0.0</version>
  <description>The action_manager package</description>

  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
  <license>TODO</license>
  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <!-- Packages -->
  <depend>actionlib</depend>
  <depend>robot_watcher</depend>

  <!-- Messages -->
  <depend>ai_msgs</depend>
  <depend>procedures_msgs</depend>
  <depend>can_msgs</depend>

  <export></export>
</package>
