<?xml version="1.0"?>
<package format="2">
  <name>action_manager</name>
  <version>0.0.0</version>
  <description>The action_manager package</description>

  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
  <license>TODO</license>
  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <!-- Packages -->
  <depend>actionlib</depend>
  <depend>node_watcher</depend>

  <!-- Messages -->
  <depend>ai_msgs</depend>
  <depend>interface_msgs</depend>

  <!-- Tests -->
  <test_depend>rostest</test_depend>
  
  <export></export>
</package>
