<?xml version="1.0"?>
<package format="2">
  <name>ai_msgs</name>
  <version>2018.1.0</version>
  <description>The ai_msgs package</description>

  <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
  <license>TODO</license>
  <author email="alx.care@gmail.com">Alexis CARE</author>

  <!-- Default requirements for *_msgs packages -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Other msgs dependencies-->
  <depend>std_msgs</depend>
  <depend>procedures_msgs</depend>
  <depend>actionlib_msgs</depend>

  <export></export>
</package>
