<?xml version="1.0"?>
<package format="2">
  <name>controller</name>
  <version>2018.1.0</version>
  <description>The controller package</description>

  <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
  <license>TODO</license>
  <author email="alx.care@gmail.com">Alexis CARE</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <!-- Packages -->
  <depend>actionlib</depend>
  <depend>robot_watcher</depend>
  <depend>robot_interface</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>ai_msgs</depend>
  <depend>can_msgs</depend>
  <depend>procedures_msgs</depend>

  <export></export>
</package>
