<?xml version="1.0"?>
<package format="2">
  <name>node_watcher</name>
  <version>2018.1.0</version>
  <description>The node_watcher package</description>

  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
  <license>TODO</license>
  <author email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</author>


  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>

  <!-- Messages -->
  <depend>ai_msgs</depend>


  <export></export>
</package>
