<?xml version="1.0"?>
<package format="2">
  <name>pathfinding</name>
  <version>2018.1.0</version>
  <description>The pathfinding package</description>
  
  <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
  <license>TODO</license>
  <author email="alx.care@gmail.com">Alexis CARE</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>ai_msgs</depend>
  <depend>robot_watcher</depend>

  <export></export>
</package>
