<?xml version="1.0"?>
<package format="2">
  <name>robot_watcher</name>
  <version>2018.1.0</version>
  <description>The robot_watcher package (Code deeply insparied by UTcoup 2018's code)</description>

  <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
  <license>TODO</license>
  <author email="alx.care@gmail.com">Alexis CARE</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>ai_msgs</depend>
  <depend>node_watcher</depend>

  <export></export>
</package>
