<?xml version="1.0"?>
<package format="2">
  <name>scheduler</name>
  <version>2018.1.0</version>
  <description>The scheduler package</description>

  <maintainer email="alx.care@gmail.com">Alexis CARE</maintainer>
  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
  <license>TODO</license>
  <author email="alx.care@gmail.com">Alexis CARE</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <!-- Packages -->
  <depend>action_manager</depend>

  <!-- Messages -->
  <depend>ai_msgs</depend>
  <depend>can_msgs</depend>
  
  <!-- Testing -->
  <test_depend>std_msgs</test_depend>

  <export></export>
</package>
