<?xml version="1.0"?>
<package format="2">
  <name>vision</name>
  <version>2018.1.0</version>
  <description>The vision package</description>

  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <!-- Packages -->
  <depend>node_watcher</depend>
  <depend>ai_description</depend>
  <depend>action_manager</depend>

  <!-- Messages -->
  <depend>ai_msgs</depend>
  <depend>interface_msgs</depend>

  <export></export>
</package>
