<?xml version="1.0"?>
<package format="2">
  <name>interface_description</name>
  <version>0.0.0</version>
  <description>The interface_description package</description>

  <maintainer email="cle.bourdonnaye@gmail.com">Clément de La Bourdonnaye</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Other msgs dependencies-->
  <depend>std_msgs</depend>

  <export></export>
</package>
